--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss';
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+body {
+    @apply dark:bg-black dark:text-white;
+    font-family: 'Inter', sans-serif, system-ui;
+}
