--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <header
     class="flex shadow-md py-4 px-4 sm:px-10 bg-white min-h-[70px] tracking-wide relative z-50 w-full sm:w-[90%] mx-auto rounded-lg dark:bg-gray-900 dark:text-white">
     <div class="flex flex-wrap items-center justify-between gap-5 w-full">
-        <a href="javascript:void(0)" class="max-sm:hidde"><img src="https://readymadeui.com/readymadeui.svg" alt="logo"
+        <a href="javascript:void(0)" class="max-sm:hidde dark:max-sm:hidden"><img src="https://readymadeui.com/readymadeui.svg" alt="logo"
                 class="w-36" /></a>
         <a href="javascript:void(0)" class="hidden max-sm:block"><img
                 src="https://readymadeui.com/readymadeui-short.svg" alt="logo" class="w-9" /></a>
@@ -20,7 +20,7 @@
             </button>
 
             <ul
-                class="lg:flex gap-x-4 max-lg:space-y-3 max-lg:fixed max-lg:bg-white max-lg:w-1/2 max-lg:min-w-[300px] max-lg:top-0 max-lg:left-0 max-lg:p-6 max-lg:h-full max-lg:shadow-md max-lg:overflow-auto z-50">
+                class="lg:flex gap-x-4 max-lg:space-y-3 max-lg:fixed max-lg:bg-white max-lg:w-1/2 max-lg:min-w-[300px] max-lg:top-0 max-lg:left-0 max-lg:p-6 max-lg:h-full max-lg:shadow-md max-lg:overflow-auto z-50 dark:max-lg:bg-gray-800 dark:text-white">
                 <li class="mb-6 hidden max-lg:block">
                     <a href="javascript:void(0)"><img src="https://readymadeui.com/readymadeui.svg" alt="logo"
                             class="w-36" />
