--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -80,6 +80,16 @@
         </button>
       </div>
 
+      <div class="w-full flex justify-center mb-4">
+        <button
+          type="button"
+          class="w-full flex justify-center py-2 px-4 border border-gray-300 dark:border-gray-700 rounded-md shadow-sm text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+          (click)="signInWithFacebook()">
+          <i class="fab fa-facebook w-5 h-5 mr-2 text-blue-600"></i>
+          {{ translate('continue_with_facebook') }}
+        </button>
+      </div>
+
       <div class="text-center">
         <p class="text-sm text-gray-600 dark:text-gray-300">
           {{ translate('dont_have_account') }}
