--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,6 +1,10 @@
 <!-- component -->
 <div class="container px-4 mx-auto pt-10">
   <div class="max-w-lg mx-auto">
+    <!-- Mobile Settings Button -->
+    <div class="lg:hidden flex justify-end mb-4">
+      <app-settings [showDirectSettings]="false"></app-settings>
+    </div>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="border-2 border-indigo-900 rounded-lg p-6 shadow-lg">
       <div class="text-center mb-4">
         <h2 class="text-2xl font-extrabold">{{ translate('login_title') }}</h2>
