--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -39,7 +39,12 @@
         </div>
         <div *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid"
           class="text-red-500 text-xs mt-1">
-          <div *ngIf="loginForm.get('password')?.errors?.['required']">{{ translate('password') }} is required</div>
+          @if(loginForm.get('password')?.errors?.['required'])
+          {
+          <div>{{ translate('password') }}</div>
+          }@else{
+          <div>{{ translate('password_invalid_pattern') }}</div>
+          }
         </div>
       </div>
 
@@ -75,8 +80,7 @@
       </div>
 
       <div class="w-full flex justify-center mb-4">
-        <button
-          type="button"
+        <button type="button"
           class="w-full flex justify-center py-2 px-4 border border-gray-300 dark:border-gray-700 rounded-md shadow-sm text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
           (click)="signInWithGoogle()">
           <app-google-icon class="w-5 h-5 mr-2"></app-google-icon>
@@ -85,8 +89,7 @@
       </div>
 
       <div class="w-full flex justify-center mb-4">
-        <button
-          type="button"
+        <button type="button"
           class="w-full flex justify-center py-2 px-4 border border-gray-300 dark:border-gray-700 rounded-md shadow-sm text-sm font-medium text-gray-700 dark:text-gray-300 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
           (click)="signInWithFacebook()">
           <i class="fab fa-facebook w-5 h-5 mr-2 text-blue-600"></i>
@@ -97,7 +100,7 @@
       <div class="text-center">
         <p class="text-sm text-gray-600 dark:text-gray-300">
           {{ translate('dont_have_account') }}
-          <a routerLink="/signup" class="font-medium text-blue-600 hover:text-blue-500">
+          <a routerLink="/auth/signup" class="font-medium text-blue-600 hover:text-blue-500">
             {{ translate('signup') }}
           </a>
         </p>
