--- a/src/app/modules/auth/signup/signup.component.html
+++ b/src/app/modules/auth/signup/signup.component.html
@@ -158,7 +158,7 @@
       <div class="text-center">
         <p class="text-sm text-gray-600 dark:text-gray-300">
           {{ translate('already_have_account') }}
-          <a routerLink="/login" class="font-medium text-blue-600 hover:text-blue-500">
+          <a routerLink="/auth/login" class="font-medium text-blue-600 hover:text-blue-500">
             {{ translate('login') }}
           </a>
         </p>
