--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -16,11 +16,10 @@
         <label class="block mb-1 font-bold text-sm" for="email">{{ translate('email') }}</label>
         <input id="email"
           class="inline-block w-full p-2 text-sm font-medium placeholder-indigo-900 bg-white shadow border-2 border-indigo-900 rounded dark:text-black"
-          type="email" placeholder="john.doe@example.com" formControlName="email">
-        <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid"
+          type="email" placeholder="john.doe@example.com" formControlName="account">
+        <div *ngIf="loginForm.get('account')?.touched && loginForm.get('account')?.invalid"
           class="text-red-500 text-xs mt-1">
-          <div *ngIf="loginForm.get('email')?.errors?.['required']">{{ translate('email') }} is required</div>
-          <div *ngIf="loginForm.get('email')?.errors?.['email']">Please enter a valid email</div>
+          <div *ngIf="loginForm.get('account')?.errors?.['required']">{{ translate('account') }}</div>
         </div>
       </div>
 
@@ -51,13 +50,13 @@
       <!-- Remember Me & Forgot Password -->
       <div class="flex items-center justify-between mb-4">
         <div class="flex items-center">
-          <input id="remember" type="checkbox" formControlName="remember"
+          <!-- <input id="remember" type="checkbox" formControlName="remember"
             class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
           <label for="remember" class="ml-2 block text-sm text-gray-900 dark:text-gray-300">
             {{ translate('remember_me') }}
-          </label>
+          </label> -->
         </div>
-        <a href="#" class="text-sm text-indigo-600 hover:text-indigo-500">
+        <a href="" class="text-sm text-indigo-600 hover:text-indigo-500">
           {{ translate('forgot_password') }}
         </a>
       </div>
